<resources>
    <string name="app_name">AlgoViz</string>
    <string name="title_activity_path_find">PathFind</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="slider_desc">Slider to control speed of the algorithm</string>
    <string name="checkBoxLabel">Diagonal</string>
    <string name="choose_algorithm">Choose Algorithm</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="step">Step</string>
    <string name="finish">Finish</string>
    <string name="removeWalls">Remove Walls</string>
    <string name="clear">Clear</string>
    <string name="complete">Complete</string>
    <string name="deWall">De-Wall</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="choose_block">Choose Block</string>
    <string name="block">Block</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>